--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ru.angelovich.mediacontroller.chartapplication.ru.angelovich.chartapplication.MainActivity">
+    tools:context="ru.angelovich.chartapplication.MainActivity">
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_theme"
+        android:icon="@android:drawable/ic_menu_compass"
+        android:onClick="onThemeClick"
+        android:orderInCategory="100"
+        android:title="@string/night_mode"
+        app:showAsAction="ifRoom" />
 </menu>
