--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorToolbarLight">#517DA2</color>
+    <color name="colorToolbarDark">#212d3b</color>
+
+    <color name="backgroundLight">#FFFFFF</color>
+    <color name="backgroundDark">#212d3b</color>
 </resources>
