Hide chart line implemented Draw optimized

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="colorToolbarDark">#212d3b</color>
 
     <color name="backgroundLight">#FFFFFF</color>
-    <color name="backgroundDark">#212d3b</color>
+    <color name="backgroundDark">#1D2733</color>
 </resources>
