--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -46,6 +46,7 @@
             </FrameLayout>
 
             <LinearLayout
+                android:id="@+id/linesControls"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
